<resources>

    <string name="app_name">ProizvodCounter</string>
    <string name="txtVnesiImeStr">Kreiraj nov proizvod</string>
    <string name="tbVnesiImeStr">Vnesi ime na nov proizvod</string>


    <string name="temi">yo</string>
    <string name="temaOsnovna">Основна</string>
    <string name="temaMagenta">Магента</string>
    <string name="temaTirkiz">Тиркиз</string>
    <string name="temaLilava">Лилава</string>
    <string name="mozniTemi">Избери тема:</string>
    <string name="kreirajNovaTema">КРЕИРАЈ СОПСТВЕНА ТЕМА</string>
    <string name="primarnaBoja">Боја 1:</string>
    <string name="SekundarnaBoja">Боја 2:</string>
    <string name="TercijalnaBoja">Боја 3:</string>
    <string name="KreirajTema">КРЕИРАЈ ТЕМА</string>
    <string name="uspeshnoKreiranaTema">Успешно креирана нова тема</string>
    <string name="potvrdaSmenaTemaNaslov">Смена на тема</string>
    <string name="potvrdaSmenaTemaOpis">Дали сигурно сакате да ја смените темата на апликацијата? Доколку изберите да, апликацијата ќе се рестартира.</string>
    <string name="da">Да</string>
    <string name="ne">Не</string>

    <string name="jazik">Јазик</string>
    <string name="potvrdiSmenaJazikNaslov">Смена на јазик</string>
    <string name="potvrdaSmenaJazikOpis">Дали сигурно сакате да го смените јазикот на апликацијата? Доколку изберите да, апликацијата ќе се рестартира.</string>

    <string name="jabolko">Јаболко</string>
    <string name="leb">Леб</string>
    <string name="kafe">Кафе</string>
    <string name="banana">Банана</string>
    <string name="vino">Вино</string>

    <string name="nemaDodadeniProdukti">Немате селектирано ниту еден продукт!</string>
    <plurals name="uspeshnoDodadeniProdukti">
        <item quantity="one">Успешно додаден 1 продукт</item>
        <item quantity="other">Успешно додадени %1$d продукти</item>
    </plurals>
    <string name="istorijaProdukti">Историја на продадени продукти:</string>
    <string name="kolicna">кол</string>
    <string name="potvrdaBrisenjeProduktOpis">Дали сигурно сакате да го избришите продуктот %1$s ?</string>
    <string name="potvrdaBrisenjeProduktNaslov">Бришење продукт</string>

    <string name="kreiraj">КРЕИРАЈ ПРОИЗВОД</string>
    <string name="ime">Име</string>
    <string name="novProizvod">НОВ ПРОИЗВОД:</string>
    <string name="uspeshnoKreiranProdukt">Успешно креиран продукт со име </string>
    <string name="warningProduktBezIme">Не можите да креирате продукт без име!</string>
    <string name="warningProduktistoIme">Не можите да креирате продукт со име %1$s бидејќи веќе постој таков продукт</string>
    <string name="warningProduktiBroj">Не моѓите да креирате продукт со бројка во името</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about">За нас</string>
</resources>
